--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "laraveles/spanish": "^1.5"
+        "laraveles/spanish": "^1.5",
+        "orangehill/iseed": "^3.0"
     },
     "require-dev": {
         "laravel/sail": "^1.0.1",
