--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
-        "orangehill/iseed": "^3.0"
+        "orangehill/iseed": "^3.0",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "laravel/sail": "^1.0.1",
