--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
+        "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^3.0",
+        "psr/simple-cache": "1.0",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
